# omne_foundation

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/audio-input-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/audio-input-kit/src/: lib.rs
crates/config-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/config-kit/src/: env.rs  error.rs  format.rs  lib.rs  load.rs  merge.rs  schema.rs  typed.rs
crates/error-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/error-protocol/bindings/: CatalogArgValueData.ts  ErrorCategoryData.ts  ErrorData.ts  ErrorRetryAdviceData.ts  StructuredTextData.ts
crates/error-protocol/src/: lib.rs
crates/github-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/github-kit/src/: client.rs  error.rs  lib.rs  release.rs
crates/http-auth-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/http-auth-kit/src/: lib.rs
crates/http-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/http-kit/src/: body.rs  client.rs  error.rs  http_probe.rs  ip.rs  lib.rs  outbound_policy.rs  public_ip.rs  sse.rs  tokio_time.rs  url.rs
crates/i18n-runtime-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/i18n-runtime-kit/src/: catalog_error.rs  global_catalog.rs  i18n.rs  lazy_catalog.rs  lazy_compat.rs  lazy_state.rs  lib.rs  locale_selection.rs
crates/mcp-jsonrpc/: CHANGELOG.md  Cargo.toml  README.md
crates/mcp-jsonrpc/src/: background_runtime.rs  client.rs  close_lock.rs  detached.rs  error.rs  lib.rs  options.rs  reader.rs  runtime.rs  state.rs  stdout_log.rs  streamable_http.rs  tests.rs  transport.rs
crates/mcp-jsonrpc/tests/: in_memory.rs  streamable_http.rs
crates/mcp-kit/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  llms.txt
crates/mcp-kit/docs/: README.md  SUMMARY.md  api.md  book.toml  cli.md  concepts.md  config.md  contributing.md  design.md  examples.md  faq.md  guides.md  jsonrpc.md  library.md  llms.md  llms.txt  logging.md  more.md  quickstart.md  reference.md  release.md  security.md  streamable_http.md  transports.md  troubleshooting.md  tuning.md
crates/mcp-kit/examples/: README.md  client_with_policy.rs  in_memory_duplex.rs  minimal_client.rs  session_handoff.rs  stdio_self_spawn.rs  streamable_http_custom_options.rs  streamable_http_split.rs  unix_loopback.rs
crates/mcp-kit/scripts/: check-rust-hygiene.sh  gen-llms-txt.sh  setup-githooks.sh
crates/mcp-kit/src/: convenience.rs  error.rs  lib.rs  mcp.rs  path_identity.rs  protocol.rs  security.rs  server_name.rs  session.rs  shared_manager.rs
crates/mcp-kit/src/config/: file_format.rs  load.rs  mod.rs  model.rs  tests.rs
crates/mcp-kit/src/manager/: connect.rs  convenience.rs  handlers.rs  lifecycle.rs  mod.rs  path_identity.rs  placeholders.rs  streamable_http_validation.rs  tests.rs
crates/mcp-kit/src/shared_manager/: lifecycle.rs  rpc.rs  tests.rs
crates/mcp-kit/tests/: mcpctl_cli.rs
crates/model-assets-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/model-assets-kit/src/: lib.rs
crates/notify-kit/: CHANGELOG.md  Cargo.toml  README.md  llms.txt
crates/notify-kit/bots/: README.md
crates/notify-kit/bots/_shared/: bootstrap.mjs  limiter.mjs  log.mjs  opencode.mjs  opencode.test.mjs  session_store.mjs  session_store.test.mjs
crates/notify-kit/bots/opencode-dingtalk-stream/: README.md  package.json
crates/notify-kit/bots/opencode-discord/: README.md  package.json
crates/notify-kit/bots/opencode-feishu/: README.md  package.json
crates/notify-kit/bots/opencode-github-action/: README.md  action.yml  package.json
crates/notify-kit/bots/opencode-slack/: README.md  package.json
crates/notify-kit/bots/opencode-telegram/: README.md  package.json
crates/notify-kit/bots/opencode-wecom/: README.md  package.json
crates/notify-kit/docs/: README.md  SUMMARY.md  book.toml  bots.md  changelog.md  concepts.md  design.md  development.md  examples.md  faq.md  getting-started.md  integration.md  llms.md  security.md
crates/notify-kit/docs/api/: README.md  event.md  hub.md  sink.md
crates/notify-kit/docs/sinks/: README.md  bark.md  custom.md  dingtalk.md  discord.md  feishu.md  github.md  pushplus.md  serverchan.md  slack.md  (+4 more)
crates/notify-kit/scripts/: bootstrap.sh  build-llms-txt.py  build-llms-txt.sh  docs.sh  gate.sh  pre-commit-check.sh  setup-githooks.sh
crates/notify-kit/src/: builtin.rs  core.rs  env.rs  error.rs  event.rs  hub.rs  lib.rs  log.rs  providers.rs  secret.rs
crates/notify-kit/tests/: core_boundary.rs  structured_event_projection.rs
crates/omne-fs-primitives/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/omne-fs-primitives/docs/: docs-system-map.md
crates/omne-fs-primitives/src/: advisory_lock.rs  atomic_write.rs  cap_root.rs  lib.rs  path_identity.rs  platform_open.rs
crates/omne-process-primitives/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/omne-process-primitives/docs/: docs-system-map.md
crates/omne-process-primitives/src/: command_path.rs  host_command.rs  lib.rs
crates/policy-meta/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
crates/policy-meta/bindings/: policy-meta.d.ts
crates/policy-meta/schema/: policy-meta.v1.json  policy-profile.v1.json
crates/policy-meta/src/: artifacts.rs  contract.rs  lib.rs
crates/runtime-assets-kit/: CHANGELOG.md  Cargo.toml
crates/runtime-assets-kit/src/: bootstrap_lock.rs  data_root.rs  i18n.rs  lazy_state.rs  lib.rs  prompts.rs  resource_bootstrap.rs  resource_path.rs  secure_fs.rs  text_directory.rs  text_resource.rs
crates/secret-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/secret-kit/src/: command.rs  file.rs  json.rs  lib.rs  runtime.rs  spec.rs  system_keyring.rs  tests.rs  types.rs  value.rs
crates/speech-transcription-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/speech-transcription-kit/src/: lib.rs
crates/speech-whisper-kit/: CHANGELOG.md  Cargo.toml  README.md
crates/speech-whisper-kit/src/: lib.rs
crates/structured-text-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/structured-text-protocol/bindings/: CatalogArgData.ts
crates/structured-text-protocol/src/: lib.rs
(+212 files in other folders)
