[workspace]
members = [
  "crates/structured-text-kit",
  "crates/structured-text-protocol",
  "crates/i18n-kit",
  "crates/mcp-jsonrpc",
  "crates/mcp-kit",
  "crates/notify-kit",
  "crates/runtime-assets-kit",
  "crates/secret-kit",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
libc = "0.2"
omne-systems-fs-primitives = { path = "../omne-systems-runtime/crates/omne-systems-fs-primitives" }
omne-systems-process-primitives = { path = "../omne-systems-runtime/crates/process-primitives" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync", "io-util", "io-std", "signal", "net"] }
tokio-util = { version = "0.7", features = ["io"] }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
