[workspace]
members = [
  "crates/audio-input-kit",
  "crates/audio-media-kit",
  "crates/config-kit",
  "crates/desktop-input-kit",
  "crates/structured-text-kit",
  "crates/structured-text-protocol",
  "crates/error-kit",
  "crates/error-protocol",
  "crates/github-kit",
  "crates/http-kit",
  "crates/log-kit",
  "crates/i18n-kit",
  "crates/i18n-runtime-kit",
  "crates/mcp-jsonrpc",
  "crates/mcp-kit",
  "crates/model-assets-kit",
  "crates/notify-kit",
  "crates/policy-meta",
  "crates/prompt-kit",
  "crates/secret-kit",
  "crates/speech-whisper-kit",
  "crates/speech-transcription-kit",
  "crates/text-postprocess-kit",
  "crates/text-assets-kit",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hound = "3.5.1"
libc = "0.2"
omne-fs-primitives = { version = "0.1.0", git = "ssh://mac@gitea-personal/omne/omne-runtime.git", rev = "9c69b43d8b51a4fbc3e87450fb74fb67c0e62532", package = "omne-fs-primitives" }
omne-process-primitives = { version = "0.1.0", git = "ssh://mac@gitea-personal/omne/omne-runtime.git", rev = "9c69b43d8b51a4fbc3e87450fb74fb67c0e62532", package = "omne-process-primitives" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync", "io-util", "io-std", "signal", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
whisper-rs = "0.16.0"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
