[package]
name = "audio-input-kit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
cpal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
