[package]
name = "http-auth-kit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hmac.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
httpmock = "0.8.2"
tokio.workspace = true

[lints]
workspace = true
