[package]
name = "http-kit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
