[package]
name = "i18n-runtime-kit"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
i18n-kit = { version = "0.1.0", path = "../i18n-kit" }
structured-text-kit = { version = "0.1.0", path = "../structured-text-kit" }
text-assets-kit = { version = "0.1.0", path = "../text-assets-kit" }

[dev-dependencies]
tempfile = "3"
