[package]
name = "mcp-jsonrpc"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
bytes.workspace = true
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
error-kit = { path = "../error-kit" }
futures-util.workspace = true
http-kit = { path = "../http-kit" }
omne-fs-primitives.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
structured-text-kit = { path = "../structured-text-kit" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "io-util", "process", "fs", "time", "net"] }
tokio-util.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
