[package]
name = "mcp-kit"
edition.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
futures-util.workspace = true
mcp-jsonrpc = { path = "../mcp-jsonrpc" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
cli = ["dep:clap"]

[[bin]]
name = "mcpctl"
path = "src/bin/mcpctl.rs"
required-features = ["cli"]
