[package]
name = "model-assets-kit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
omne-artifact-install-primitives = { workspace = true }
omne-fs-primitives = { workspace = true }
omne-integrity-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
