[package]
name = "notify-kit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
include = ["/src/**", "/Cargo.toml", "/README.md", "/CHANGELOG.md"]
publish = false

[lints]
workspace = true

[features]
default = ["all-sinks"]
all-sinks = [
    "bark",
    "dingtalk",
    "discord",
    "feishu",
    "generic-webhook",
    "github",
    "pushplus",
    "serverchan",
    "slack",
    "sound",
    "telegram",
    "wecom",
]
bark = ["dep:http-kit", "dep:reqwest", "dep:secret-kit"]
dingtalk = [
    "dep:base64",
    "dep:hmac",
    "dep:http-kit",
    "dep:reqwest",
    "dep:secret-kit",
    "dep:sha2",
]
discord = ["dep:http-kit", "dep:reqwest"]
feishu = [
    "dep:base64",
    "dep:hmac",
    "dep:http-kit",
    "dep:libc",
    "dep:pulldown-cmark",
    "dep:reqwest",
    "dep:secret-kit",
    "dep:sha2",
]
generic-webhook = ["dep:http-kit", "dep:reqwest"]
github = ["dep:github-kit", "dep:http-kit", "dep:reqwest", "dep:secret-kit"]
pushplus = ["dep:http-kit", "dep:reqwest", "dep:secret-kit"]
selective-sinks = []
serverchan = ["dep:http-kit", "dep:reqwest", "dep:secret-kit"]
slack = ["dep:http-kit", "dep:reqwest"]
sound = []
# Allow SoundSink to execute external commands (SoundConfig.command_argv).
sound-command = ["sound"]
telegram = ["dep:http-kit", "dep:reqwest", "dep:secret-kit"]
wecom = ["dep:http-kit", "dep:reqwest"]

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
error-kit = { version = "0.1.0", path = "../error-kit" }
futures-util = "0.3"
hmac = { version = "0.12", optional = true }
http-kit = { version = "0.1.0", path = "../http-kit", optional = true }
github-kit = { version = "0.1.0", path = "../github-kit", optional = true }
libc = { version = "0.2", optional = true }
log-kit = { version = "0.1.0", path = "../log-kit" }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
pulldown-cmark = { version = "0.12", optional = true }
secret-kit = { version = "0.1.0", path = "../secret-kit", optional = true }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
structured-text-kit = { version = "0.1.0", path = "../structured-text-kit" }
tokio = { version = "1", features = ["net", "process", "rt", "sync", "time"] }
tracing = "0.1"
