[package]
name = "notify-kit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
include = ["/src/**", "/Cargo.toml", "/README.md", "/CHANGELOG.md"]

[lints]
workspace = true

[features]
default = ["standard-env"]
http-client = ["dep:http-kit", "dep:reqwest"]
crypto = ["dep:base64", "dep:hmac", "dep:sha2"]
sink-bark = ["http-client"]
sink-dingtalk = ["http-client", "crypto"]
sink-discord = ["http-client"]
sink-feishu = ["http-client", "crypto", "dep:libc", "dep:pulldown-cmark"]
sink-generic-webhook = ["http-client"]
sink-github = ["http-client", "dep:github-kit"]
sink-pushplus = ["http-client"]
sink-serverchan = ["http-client"]
sink-slack = ["http-client"]
sink-sound = []
sink-telegram = ["http-client"]
sink-wecom = ["http-client"]
standard-env = ["sink-feishu", "sink-generic-webhook", "sink-slack", "sink-sound"]
# Allow SoundSink to execute external commands (SoundConfig.command_argv).
sound-command = ["sink-sound"]

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
futures-util = "0.3"
hmac = { version = "0.12", optional = true }
http-kit = { path = "../http-kit", optional = true }
github-kit = { path = "../github-kit", optional = true }
libc = { version = "0.2", optional = true }
log-kit = { path = "../log-kit" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"], optional = true }
pulldown-cmark = { version = "0.12", optional = true }
secret-kit = { path = "../secret-kit" }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
structured-text-kit = { path = "../structured-text-kit" }
tokio = { version = "1", features = ["net", "process", "rt", "sync", "time"] }
tracing = "0.1"
