[package]
name = "omne-process-primitives"
version = "0.1.0"
edition = "2024"
description = "Low-level Omne process primitives."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["process"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["process"] }

[target.'cfg(windows)'.dependencies]
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
win32job = "2.0.3"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "process", "rt", "rt-multi-thread", "time"] }
