[package]
name = "secret-kit"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
error-kit = { version = "0.1.0", path = "../error-kit" }
structured-text-kit = { version = "0.1.0", path = "../structured-text-kit" }
omne-fs-primitives = { version = "0.1.0", path = "../omne-fs-primitives" }
omne-process-primitives = { version = "0.1.0", path = "../omne-process-primitives" }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
