[package]
name = "speech-whisper-kit"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
hound = { workspace = true }
omne-fs-primitives = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
whisper-rs = { workspace = true }

[features]
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
